view: fix unresponsive ui at top of page
The bottom padding on v-media-container applied to the navbar
overlapped with the page content, covering it up.

Move that padding to the body element, which will apply only
at the actual bottom of the page, which is where we want it.

--- a/view/base-browse.css
+++ b/view/base-browse.css
@@ -3,7 +3,7 @@
 .v-media-container {
 	width: 100%;
 	max-width: 79.5rem;
-	padding: 0 1.5rem 8rem;
+	padding: 0 1.5rem;
 	margin-inline: auto;
 }
 
