--- a/web/static/static/bundle.css
+++ b/web/static/static/bundle.css
@@ -2067,7 +2067,7 @@
   .v-media-container {
     width: 100%;
     max-width: 79.5rem;
-    padding: 0 1.5rem 8rem;
+    padding: 0 1.5rem;
     margin-inline: auto;
   }
   .v-media-wash {
